tests/integration/conformance/testdata/networking/envoyFilter/basic/input.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple-envoy-filter
spec:
  workloadSelector:
    labels:
      app: c
  configPatches:
    - applyTo: HTTP_FILTER
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.fault
          config:
            abort:
              percentage:
                numerator: 100
                denominator: HUNDRED
              httpStatus: 444
            headers:
              name: envoyfilter-test
              exactMatch: foobar123
