tests/integration/conformance/testdata/networking/envoyFilter/basic/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/envoyfilters
    check:
    - exactlyOne:
      - equals: {
        "Body": {
          "configPatches": [
          {
            "applyTo": "HTTP_FILTER",
            "patch": {
              "operation": "INSERT_BEFORE",
              "value": {
                "config": {
                  "abort": {
                    "httpStatus": 444,
                    "percentage": {
                      "denominator": "HUNDRED",
                      "numerator": 100
                    }
                  },
                  "headers": {
                    "exactMatch": "foobar123",
                    "name": "envoyfilter-test"
                  }
                },
                "name": "envoy.fault"
              }
            }
          }
          ],
          "workloadSelector": {
            "labels": {
              "app": "c"
            }
          }
        },
        "Metadata": {
          "name": "{{.Namespace}}/simple-envoy-filter"
        },
        "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.EnvoyFilter"
      }
